--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   gap: ^3.0.1
   riverpod: ^2.3.7
   flutter_riverpod: ^2.3.7
+  intl: ^0.18.1
+  firebase_core: ^2.15.1
+  cloud_firestore: ^4.8.5
 
 dev_dependencies:
   flutter_test:
